# open-tracker

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
.github/workflows/: daily-track.yml
src/opentacker/: __init__.py  analyzer.py  cli.py  config.py  github_client.py  list_parser.py  reporter.py  tracker.py
tests/: test_parser.py
web/: .env.example  .gitignore  next.config.js  package-lock.json  package.json
web/app/: globals.css  layout.tsx  loading.tsx  page.tsx
web/app/community/: page.tsx
web/app/dashboard/: page.tsx
web/app/login/: page.tsx
web/app/match/: page.tsx
web/app/moderation/: page.tsx
web/app/publish/: page.tsx
web/app/register/: page.tsx
web/components/: BilibiliProfileEmbed.tsx  BountyHall.tsx  Charts.tsx  CommunityBoard.tsx  DashboardClient.tsx  GithubProfileEmbed.tsx  LoginForm.tsx  MatchWorkspace.tsx  ModerationClient.tsx  OpportunityDetail.tsx  OpportunityExplorer.tsx  PaginationBar.tsx  ProjectBoard.tsx  PublicProfile.tsx  PublishForm.tsx  RegisterForm.tsx  ReportDialog.tsx  SiteHeader.tsx  WorksGallery.tsx
web/lib/: analytics.ts  auth.ts  bilibili-embed.ts  bounties-list.ts  colors.ts  data.ts  enrich.ts  github-embed.ts  matching.ts  opportunity-fingerprint.ts  opportunity-policy.ts  prisma.ts  profile-media.ts  project-profiles.ts  source-labels.ts  task-coach.ts  taxonomy.ts  types.ts
web/lib/sources/: algora.ts  arbeitnow.ts  github-search.ts  job-utils.ts  jobicy.ts  sync.ts  (+5 more)
web/prisma/: schema.prisma
web/scripts/: sync-jobs.ts  sync-once.ts  sync-portals.ts
web/types/: next-auth.d.ts
(+18 files in other folders)
