[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentacker"
version = "0.1.0"
description = "定期追踪付费开源项目进展、奖金与可贡献需求"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "pyyaml>=6.0",
  "rich>=13.7",
  "apscheduler>=3.10",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
opentacker = "opentacker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
